# positive_password_book

./: .gitignore  README.md  TODO.md  icon.kra  launch.py  launch_backend_server.py  launch_backend_server.spec  launch_cli.py  launch_gui.py  launch_tui.py  launch_tui.spec  ppb_gui.spec  ppb_gui_onefile.spec  ppb_tui.spec  pyproject.toml  setting_tui.md  tui.spec
.github/workflows/: commit-build-gui.yaml  commit-build-tui.yaml  commit-build.yaml  release-build-gui.yaml  release-build-tui.yaml  release-build.yaml
READMEs/: README_en.md
change_log/: change_log_0.2.0.md  change_log_0.3.x.md
ci/: find_exe.py  get_sha.py  get_version.py  rename_exe.py  upload_artifacts.py
src/positive_password_book/: __init__.py
src/positive_password_book/ppb_launcher/: launcher.py
src/positive_password_book/ppb_tui/: ppb_tui.py
src/ppb/: __init__.py  copy_gui_addons.py  project_infos.py
src/ppb/ppb_backend/: __main__.py  ppb_backend.py
src/ppb/ppb_cli/: ppb_cli.py
src/ppb/ppb_gui/: .gitignore  app_data.tscn  app_data_item.tscn  export_presets.cfg  icon.png.import  main.py  main.tscn  ppb_gui.py  project.godot  styles.py  unpack_addons.py
src/ppb/ppb_gui/addons/ppb_backend/: .gitignore
src/ppb/ppb_gui/addons/ppb_gui_middle/: .gitignore  ppb_gui_middle.gdextension  ppb_gui_middle.gdextension.uid
src/ppb/ppb_gui/fonts/Noto_Sans_TC/: NotoSansTC-VariableFont_wght.ttf.import
src/ppb/ppb_gui/fonts/Noto_Sans_TC/static/: NotoSansTC-Black.ttf.import  NotoSansTC-Bold.ttf.import  NotoSansTC-ExtraBold.ttf.import  NotoSansTC-ExtraLight.ttf.import  NotoSansTC-Light.ttf.import  NotoSansTC-Medium.ttf.import  NotoSansTC-Regular.ttf.import  NotoSansTC-SemiBold.ttf.import  NotoSansTC-Thin.ttf.import
src/ppb/ppb_gui/scripts/: main_v_box_container.gd  main_v_box_container.gd.uid
src/ppb/ppb_gui_middle/: Cargo.toml
src/ppb/ppb_gui_middle/src/: lib.rs
src/ppb/ppb_gui_old/: ppb_gui.py
src/ppb/ppb_launcher/: launcher.py  ppb_launcher.py
src/ppb/ppb_tui/: ppb_tui.py
src/ppb_backend/: password_book_system.py  ppb_backend.py
src/ppb_launcher/: launch.py  launcher.py
src/ppb_tui/: ppb_tui.py
