[project]
name = "positive-password-book"
version = "0.3.0"
license = "AGPL-3.0-only"
description = "一個密碼本"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer~=0.20.1",
    "positive_tool @ https://github.com/TW0hank0/positive_tool/releases/download/v0.6.1/positive_tool-0.6.0-py3-none-any.whl",
]

[project.optional-dependencies]
tui = ["rich>=14.2.0"]
gui = ["pyside6>=6.10.1"]
build = ["pyinstaller>=6.17.0"]

[project.urls]
Homepage = "https://github.com/TW0hank0/positive_password_book/"
"Source Code" = "https://github.com/TW0hank0/positive_password_book/"
"Bug Tracker" = "https://github.com/TW0hank0/positive_password_book/issues/"
Changelog = "https://github.com/TW0hank0/positive_password_book/change_log/"
#Documentation = "https://github.com/TW0hank0/positive_password_book/"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ppb = "ppb.ppb_launcher.launcher:launch"
ppb_tui = "ppb.ppb_launcher.launcher:launch_tui"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "site-packages",
    "change_log",
    ".logs",
    ".godot",
    "exports",
    "addons",
    "fonts",
]
line-length = 80
indent-width = 4
